--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 asgiref==3.3.4
 cffi==1.14.5
 cryptography==3.4.7
+Django==3.2
+django-filter==2.4.0
 django-rest-knox==4.1.0
-django==3.2
 djangorestframework==3.12.4
 psycopg2==2.8.6
 pycparser==2.20
